# azure-openai-llm-examples

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: azDatabricksLangChainSQLAgent.py  azMultiStageReasoning.py  azOpenAILangChainAgents.py  azOpenAILangChainDocQnA.py  azOpenaiLangChainWebRetriver.py  azopenaiLangChain.py  dataScienceAgent.py  ds.py  pandasDFAgent.py
src/utils/: AzOpenaiLLM.py  databrickConn.py
